Refactored application.properties and update integration tests to include Basic Auth headers